Delete an excess command in .appveyor.yml

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ build_script:
   - yarn build   # команда сборки
 
 test_script:
-  - yarn lint && yarn test --passWithNoTests  # скрипт тестирования
+  - yarn test --passWithNoTests  # скрипт тестирования
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
